# unraid-mcp

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
.gitea/workflows/: docker-build.yml
.github/workflows/: docker-build.yml
unraid_mcp/: main.py  server.py
unraid_mcp/config/: logging.py  settings.py
unraid_mcp/core/: client.py  exceptions.py  types.py
unraid_mcp/subscriptions/: diagnostics.py  manager.py  resources.py
unraid_mcp/tools/: docker.py  health.py  metrics.py  parity.py  rclone.py  storage.py  system.py  ups.py  virtualization.py
